--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>eu.techwares</groupId>
   <artifactId>quarkus-fullstack</artifactId>
@@ -17,6 +16,8 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.6.1.Final</quarkus.platform.version>
     <surefire-plugin.version>2.22.1</surefire-plugin.version>
+    <version.frontend-maven-plugin>1.10.0</version.frontend-maven-plugin>
+    <version.resources-plugin>3.1.0</version.resources-plugin>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -109,6 +110,38 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
+      <!-- Used to run the vue build -->
+      <plugin>
+        <groupId>com.github.eirslett</groupId>
+        <artifactId>frontend-maven-plugin</artifactId>
+        <version>${version.frontend-maven-plugin}</version>
+        <configuration>
+          <workingDirectory>webapp</workingDirectory>
+        </configuration>
+      </plugin>
+      <!-- Copy the built webapp to the directory used by Quarkus -->
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>${version.resources-plugin}</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/classes/META-INF/resources/</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>webapp/dist</directory>
+                  <filtering>false</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <profiles>
@@ -145,6 +178,87 @@
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
       </properties>
+    </profile>
+    <profile>
+      <!--
+        Installs node and yarn in the webapp/node and webapp/node_modules folders respectively.
+        Run 'mvn package -Dui.deps':
+          * the first time you have checked out the source.
+          * whenever the dependencies have been changed in package.json (delete the webapp/node_modules folder first!)
+      -->
+      <id>Install node and yarn</id>
+      <activation>
+        <property>
+          <name>ui.deps</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <!--
+                  Install node and yarn for the plugin to have a copy.
+                -->
+                <id>install node and yarn</id>
+                <goals>
+                  <goal>install-node-and-yarn</goal>
+                </goals>
+                <configuration>
+                  <!-- Make sure these match the version you installed on your system -->
+                  <nodeVersion>v12.17.0</nodeVersion>
+                  <yarnVersion>v1.22.1</yarnVersion>
+                </configuration>
+              </execution>
+              <execution>
+                <!--
+                  Run yarn install when having updated dependencies
+                  -->
+                <id>npm install</id>
+                <goals>
+                  <goal>yarn</goal>
+                </goals>
+                <!-- Optional configuration which provides for running any yarn command -->
+                <configuration>
+                  <arguments>install</arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <!--
+        Since building the ui is slightly time-consuming, and not all changes necessarily affect the ui, turn on
+        building the ui explicitly by running 'atlas-package -Dob.ui.dev'.
+        
+        This is faster than the production build as it does not perform all optimisations at build time.
+      -->
+      <id>Build the UI</id>
+      <activation>
+        <property>
+          <name>ui.dev</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>npm run build</id>
+                <goals>
+                  <goal>yarn</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
