--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 # configure your datasource
+%dev.quarkus.datasource.url=jdbc:postgresql://localhost:5432/postgres
+%docker.quarkus.datasource.url=jdbc:postgresql://db:5432/postgres
 quarkus.datasource.url=jdbc:postgresql://localhost:5432/postgres
 quarkus.datasource.driver=org.postgresql.Driver
 quarkus.datasource.username=postgres
