--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,16 @@
 version: "3"
 
 services:
+  server:
+    image: quarkus-fullstack
+    ports:
+      - "8080:8080"
+      - "8778:8778"
+      - "9779:9779"
+    environment:
+      - POSTGRES_PASSWORD=postgres_234
+      - QUARKUS_PROFILE=docker
+
   db:
     image: postgres:9.6-alpine
     ports:
