--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -36,3 +36,5 @@ jobs:
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+        env:
+          QUARKUS_DATASOURCE_URL: jdbc:postgresql://postgres:5432/postgres
