--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0-beta.1",
+    "vue": "^3.2.16",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^4.0.0-alpha.6",
@@ -36,7 +36,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-alpha.0",
     "prettier-config-standard": "^1.0.1",
-    "typescript": "~3.9.3",
+    "typescript": "^4.4.3",
     "vue-cli-plugin-vue-next": "~0.1.3"
   }
 }
