--- a/webapp/.gitignore
+++ b/webapp/.gitignore
@@ -1,11 +1,8 @@
-.DS_Store
 node_modules
-node
-/dist
-
-# local env files
-.env.local
-.env.*.local
+.DS_Store
+dist
+dist-ssr
+*.local
 
 # Log files
 npm-debug.log*
