--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "vue3-ts-ext",
-  "version": "0.1.0",
+  "name": "frontend",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "watch": "vue-cli-service build --mode=development --watch --dest ../src/main/resources/META-INF/resources/",
-    "prod": "vue-cli-service build --dest ../src/main/resources/META-INF/resources/"
+    "serve": "vite preview",
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
     "vue": "^3.2.16",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^4.0.0-alpha.6",
-    "vuex": "^4.0.0-alpha.1"
+    "vuex": "^4.0.0-alpha.1",
+    "core-js": "^3.6.5"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.3",
@@ -37,6 +36,8 @@
     "eslint-plugin-vue": "^7.0.0-alpha.0",
     "prettier-config-standard": "^1.0.1",
     "typescript": "^4.4.3",
-    "vue-cli-plugin-vue-next": "~0.1.3"
+    "vue-cli-plugin-vue-next": "~0.1.3",
+    "vite": "^2.6.4",
+    "vue-tsc": "^0.3.0"
   }
 }
