Update to latest Quarkus packages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 # configure your datasource
-%dev.quarkus.datasource.url=jdbc:postgresql://localhost:5432/postgres
-%docker.quarkus.datasource.url=jdbc:postgresql://db:5432/postgres
-quarkus.datasource.url=jdbc:postgresql://localhost:5432/postgres
-quarkus.datasource.driver=org.postgresql.Driver
+quarkus.datasource.db-kind=postgres
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres_234
+
+quarkus.datasource.jdbc.driver=org.postgresql.Driver
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.PostgreSQL92Dialect
+%dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+%docker.quarkus.datasource.jdbc.url=jdbc:postgresql://db:5432/postgres
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = drop-and-create
