--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
+
 # Eclipse
 .project
 .classpath
@@ -28,11 +35,7 @@ nb-configuration.xml
 *.orig
 *.rej
 
-# Maven
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-release.properties
+# Local environment
+.env
 
 src/main/resources/META-INF/resources
