--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
     "help": "vite build --help"
   },
   "dependencies": {
+    "pinia": "^2.0.13",
     "vue": "^3.2.25",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
